# lingo-db

./: .gitignore  CMakeLists.txt
.github/workflows/: workflow-macos.yml  workflow.yml
include/lingodb/runtime/storage/: LingoDBTable.h  RocksDBStorage.h  TableStorage.h
src/catalog/: TableCatalogEntry.cpp
src/compiler/Dialect/SubOperator/Transforms/: ParallelizePass.cpp
src/runtime/: CMakeLists.txt  LingoDBHashIndex.cpp
src/runtime/storage/: LingoDBTable.cpp  RocksDBStorage.cpp
test/unittests/: CMakeLists.txt
test/unittests/storage/: TestRocksDBStorage.cpp
tools/docker/: Dockerfile
tools/generate/: tpcds.sh
